fixed the alignment of the footer

--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,7 @@ a:hover {
 
 .container.dark .form-section input,
 .container.dark .form-section textarea {
-  background: #2e2e2e;
+  background: #2c3a47;
   border: 1px solid #818181;
 }
 
