--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -141,6 +141,7 @@
   letter-spacing: 0.1px;
   font-weight: normal;
   font-size: 1.6rem;
+  line-height: 1.4;
 }
 
 /* Dark mode */
